Added some design to home

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,46 @@
     transform: rotate(360deg);
   }
 }
+
+.footerInfo{
+  display: inline;
+  padding-right: 30px;
+}
+
+.navigationBar{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  box-shadow: 0 10px 10px -10px rgba(0,0,0,.2);
+}
+
+.navigationBar h3{
+  float: left;
+  display: block;
+}
+
+.navigationBar a{
+  float: right;
+  display: block;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+}
+
+.navigationBar .loggInn{
+  background-color: #187bcd;
+  color: white;
+}
+
+.navigationBar .loggInn:hover{
+  background-color: #1167b1;
+  color: white;
+}
+
+.navigationBar a:hover{
+  background-color: #555;
+  color: white !important;
+}
