--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,7 +38,19 @@
 }
 
 body{
-  background-color: white;
+  background-color: #F0F0F0;
+}
+
+main{
+  margin: 20px;
+}
+
+main.hjem{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
 }
 
 .footerInfo{
@@ -68,8 +80,9 @@ footer{
   float: left;
   display: block;
   margin: 0;
-  padding-left: 10px;
+  padding-left: 50px;
   padding-top: 14px;
+  font-weight: bold;
 }
 
 .navigationBar a{
@@ -107,4 +120,53 @@ header{
   width: 100%;
   padding-top: 100px;
   padding-bottom: 70px;
+  margin-bottom: 20px;
+}
+
+section{
+  background: lightgrey;
+  padding: 200px;
+}
+
+section.hjemKontorer{
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+section.hjemKontakt{
+  grid-area: 1 / 2 / 2 / 4;
+}
+
+section.hjemArtikkler{
+  grid-area: 2 / 1 / 3 / 4;
+}
+
+form{
+  border-radius: 25px;
+  background-color: white;
+  padding: 20px;
+  width: 60%;
+  display: inline-block;
+}
+
+input{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button{
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 5px;
+  font-size: 16px;
+  border-radius: 50px;
 }
