Further design and functionality implementation

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,11 +60,11 @@ main.hjem{
 }
 
 footer{
-  position: fixed;
-  bottom: 0;
   width: 100%;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background: white;
+  clear: both;
 }
 
 .navigationBar{
@@ -99,9 +99,11 @@ footer{
 a{
   text-align: center;
   text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
   color: black;
+}
+
+a:hover{
+  opacity: .9;
 }
 
 .navigationBar .loggInn{
@@ -179,6 +181,19 @@ button{
   border-radius: 50px;
 }
 
+.button{
+  background-color: grey;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 5px;
+  font-size: 16px;
+  border-radius: 50px;
+}
+
 .kontorGrid{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -203,4 +218,61 @@ button{
 
 .kontorer{
   float: left;
+}
+
+.kontorListe{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.kontorListe p{
+  float: left;
+}
+
+.kontorListe h4{
+  float: left;
+}
+
+.kontorListeTo{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.kontorListeTo p{
+  float: left;
+}
+
+.kontorListeTo h4{
+  float: left;
+}
+
+.kontorListeTre{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.kontorListeTre p{
+  float: left;
+}
+
+.kontorListeTre h4{
+  float: left;
+}
+
+.ansattDiv{
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  padding-bottom: 20px;
 }
