Made the list & grid view more aestetically pleasing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -195,6 +195,7 @@ button{
 }
 
 .kontorGrid{
+  clear: both;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -203,6 +204,7 @@ button{
 }
 
 .kontorGridTo{
+  clear: both;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
@@ -210,17 +212,13 @@ button{
   grid-row-gap: 20px;
 }
 
-.kontorFunc{
-  float: right;
-  display: block;
+.kontorTittel{
+  float: left;
   clear: both;
 }
 
-.kontorer{
-  float: left;
-}
-
 .kontorListe{
+  clear: both;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(8, 1fr);
@@ -237,6 +235,7 @@ button{
 }
 
 .kontorListeTo{
+  clear: both;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, 1fr);
@@ -253,6 +252,7 @@ button{
 }
 
 .kontorListeTre{
+  clear: both;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
