--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -276,3 +276,33 @@ button{
   grid-row-gap: 20px;
   padding-bottom: 20px;
 }
+
+.nykategori {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.nykategori-innhold{
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 25px;
+  background-color: white;
+  padding: 20px;
+  width: 60%;
+  display: inline-block;
+}
+
+.nykategori span{
+  float: right;
+  border: solid;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+}
